--- a/pokemon/Pokemon.ipynb
+++ b/pokemon/Pokemon.ipynb
@@ -13,16 +13,23 @@
     "<a id='0'></a>\n",
     "\n",
     "### Table of Contents\n",
-    "- [1. Dataset](#1)\n",
-    "- [2. Base Stat Rankings](#2)\n",
-    "    - [2.1 Total](#2.1)\n",
-    "    - [2.2 HP (Damage Sponge)](#2.2)\n",
-    "    - [2.3 Attack and Sp. Atk (Sweepers)](#2.3)\n",
-    "    - [2.4 Defense and Sp. Def (Walls](#2.4)\n",
-    "    - [2.5 Speed (Speedsters)](#2.5)\n",
-    "- [3. Type Analysis](#3)\n",
-    "\n",
-    "---\n",
+    "- [Part 1: Exploratory Analysis](#Part 1)\n",
+    "    - [1. Dataset](#1)\n",
+    "    - [2. Base Stat Rankings](#2)\n",
+    "        - [2.1 Total](#2.1)\n",
+    "        - [2.2 HP (Damage Sponge)](#2.2)\n",
+    "        - [2.3 Attack and Sp. Atk (Sweepers)](#2.3)\n",
+    "        - [2.4 Defense and Sp. Def (Walls](#2.4)\n",
+    "        - [2.5 Speed (Speedsters)](#2.5)\n",
+    "- [Part 2: Classification](#Part 2)\n",
+    "    - [3. Competitive Smogon Tiers](#3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 1: Exploratory Analysis\n",
     "\n",
     "### Library Imports"
    ]
@@ -47,10 +54,7 @@
    "source": [
     "[Return to Top](#0)\n",
     "\n",
-    "---\n",
-    "\n",
     "<a id='1'></a>\n",
-    "\n",
     "### 1. Dataset"
    ]
   },
@@ -1798,9 +1802,12 @@
     "\n",
     "---\n",
     "\n",
-    "<a id='3'></a>\n",
+    "<a id='Part 2'></a>\n",
+    "## Part 2: Classification\n",
     "\n",
-    "### Type Analysis"
+    "### 3. Competitive Smogon Tiers\n",
+    "\n",
+    "The Smogon competitive Pokémon battling community"
    ]
   },
   {
@@ -1810,6 +1817,11 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
